k8s-cluster-production/sts.forgejo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
  labels:
    app: forgejo
    git.akmalmaulana.net/forgejo: forgejo
    component: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
      git.akmalmaulana.net/forgejo: forgejo
  serviceName: "forgejo"
  replicas: 1
  template:
    metadata:
      labels:
        app: forgejo
        git.akmalmaulana.net/forgejo: forgejo
    spec:
      nodeSelector:
        kubernetes.io/hostname: cerberus
      securityContext:
        fsGroup: 1000
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:16
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 22
              protocol: TCP
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
          readinessProbe:
            httpGet:
              port: 3000
              path: /api/healthz
              scheme: HTTP
  volumeClaimTemplates:
    - metadata:
        name: forgejo-data
      spec:
        storageClassName: local-vps
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
