k8s-cluster-production/sts.forgejo-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo-db
  labels:
    app: database
    git.akmalmaulana.net/forgejo: forgejo
    component: database
spec:
  selector:
    matchLabels:
      app: database
      git.akmalmaulana.net/forgejo: forgejo
      component: database
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        git.akmalmaulana.net/forgejo: forgejo
        component: database
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: forgejo-db
          image: postgres:18
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: forgejo-db-data
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: forgejo-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: database
    git.akmalmaulana.net/forgejo: forgejo
    component: database
spec:
  selector:
    app: database
  clusterIP: None
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
