k8s-cluster-production/sts.uptime-kuma.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: production
  name: uptime-kuma
  labels:
    app: uptime-kuma
    suite: monitoring
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  serviceName: "uptime-kuma"
  volumeClaimTemplates:
    - metadata:
        name: uptime-kuma-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
          startupProbe:
            httpGet:
              path: /
              port: 3001
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 3001
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: production
  name: uptime-kuma
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "uptime.akmalmaulana.net"
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
