k8s-cluster-production/svc.forgejo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: forgejo
spec:
  selector:
    app: forgejo
    git.akmalmaulana.net/forgejo: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: 22
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: production
  name: forgejo
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "git.akmalmaulana.net"
  rules:
    - backendRefs:
        - name: forgejo
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  namespace: production
  name: forgejo
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - backendRefs:
        - name: forgejo
          port: 2222
